--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "./lib/*",
         "./server/**/*.ts",
         "./sim/**/*",
-        "./tools/set-import/*.ts"
+        "./tools/set-import/*.ts",
+        "./trashchannel/*.ts",
     ]
 }
